--- a/README.rdoc
+++ b/README.rdoc
@@ -9,14 +9,28 @@ gem install bantik-mir_utility --source http://gems.github.com
 -or-
 
 script/plugin install git://github.com/Bantik/MirUtility.git
+
+To build from your local source:
+
+  rake manifest
+  
+  rake build_gemspec
+  
+  gem build mir_utility.gemspec
+  
+  sudo gem install mir_utility
   
 == Usage
 
 == Revising the Gem
 
 1) Make your changes
+
 2) Revise the version number in Rakefile
+
 3) rake manifest
+
 4) rake build_gemspec
+
 5) git push
 
